--- a/index.html
+++ b/index.html
@@ -151,13 +151,13 @@
                 <!-- Carousel inner -->
                 <div class="carousel-inner">
                     <div class="item active">
-                        <img class="img-responsive" src="images/slider/bg1.jpg" alt="slider">
+                        <img class="img-responsive" src="images/slide-1.jpg" alt="slider">
                         <div class="slider-content">
                             <div class="col-md-12 text-center">
                                 <h2 class="animated2">
                               <span><strong>银链科技</strong></span>
                               </h2>
-                                <h3 class="animated3">
+                                <h3 class="animated3 white">
                                 <span>中国领先的区块链公共技术开发平台</span>
                               </h3>
                                 <p class="animated4"><a href="#" class="slider btn btn-system btn-large">查看</a>
@@ -167,13 +167,13 @@
                     </div>
                     <!--/ Carousel item end -->
                     <div class="item">
-                        <img class="img-responsive" src="images/slider/bg2.jpg" alt="slider">
+                        <img class="img-responsive" src="images/slide-3.jpg" alt="slider">
                         <div class="slider-content">
                             <div class="col-md-12 text-center">
                                 <h2 class="animated4">
                                 <span>选择<strong>银链</strong></span>
                             </h2>
-                                <h3 class="animated5">
+                                <h3 class="animated5 white">
                               <span>银链的联盟链、云链和培训服务，让你快速打开区块链之门</span>
                             </h3>
                                 <p class="animated6"><a href="#" class="slider btn btn-system btn-large">现在订购</a>
@@ -183,7 +183,7 @@
                     </div>
                     <!--/ Carousel item end -->
                     <div class="item">
-                        <img class="img-responsive" src="images/slider/bg3.jpg" alt="slider">
+                        <img class="img-responsive" src="images/slide-2.jpg" alt="slider">
                         <div class="slider-content">
                             <div class="col-md-12 text-center">
                                 <h2 class="animated7 white">
@@ -334,22 +334,15 @@
                 <div class="section-video-content text-center">
 
                     <!-- Start Animations Text -->
-                    <h1 class="fittext wite-text uppercase tlt">
-                      <span class="texts">
-                        <span>Modern</span>
-                        <span>Clean</span>
-                        <span>Awesome</span>
-                        <span>Cool</span>
-                        <span>Great</span>
-                      </span>
-                        Margo Template is Ready for <br/>Business, Agency <strong>or</strong> Creative Portfolios
+                    <h1 class="fittext  tlt">
+                     区块链技术研发培训班正在报名
                     </h1>
                     <!-- End Animations Text -->
 
 
                     <!-- Start Buttons -->
-                    <a href="#" class="btn-system btn-large"><i class="fa fa-tasks"></i> Check Out Features</a>
-                    <a href="#" class="btn-system btn-large btn-wite"><i class="fa fa-download"></i> Purchase This Now</a>
+                    <a href="#" class="btn-system btn-large"><i class="fa fa-tasks"></i> 查看详情</a>
+                    <a href="#" class="btn-system btn-large btn-wite"><i class="fa fa-hand-o-right"></i> 立即报名</a>
 
                 </div>
                 <!-- End Section Content -->
