--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                         </div>
                         <div class="service-content">
                             <h4>交易性能</h4>
-                            <p>至少每秒1K以上的交易吞量，可满足绝大部分业务需求</p>
+                            <p>至少每秒1K以上的交易吞吐量，可满足绝大部分业务需求</p>
                         </div>
                     </div>
                     <!-- End Service Icon 5 -->
